force-app/main/default/objects/sixsense__Batch_Log_Chunk__c/sixsense__Batch_Log_Chunk__c.object-meta.xml
<CustomObject>
    <label>6sense Batch Log Chunk</label>
    <nameField>
        <displayFormat>BLC-{00000000}</displayFormat>
        <label>Batch Log Chunk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>6sense Batch Log Chunks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>