force-app/main/default/objects/sixsense__Batch_Log_Chunk__c/fields/sixsense__Count_Error__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Count_Error__c</fullName>
    <label>Count Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>