force-app/main/default/objects/sixsense__Batch_Log_Chunk__c/fields/sixsense__Count_Ignored__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Count_Ignored__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field holds the count of records encountered which are ignorable errors. Typically, missing references to deleted related records.</description>
    <label>Count Ignored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>