force-app/main/default/objects/sixsense__Batch_Log_Chunk__c/fields/sixsense__Page_Number__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Page_Number__c</fullName>
    <label>Page Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>