force-app/main/default/objects/sixsense__Batch_Log_Chunk__c/fields/sixsense__Processing_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Processing_Start_Time__c</fullName>
    <label>Processing Start Time</label>
    <type>DateTime</type>
</CustomField>